# atp-protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: conformance-report.yml  design-partner.yml
.github/workflows/: ci.yml  publish.yml
conformance/: .gitignore  README.md  package-lock.json  package.json  tsconfig.esm.json  tsconfig.json
conformance/reports/: README.md
conformance/src/: cli.ts  index.ts  runner.ts  types.ts
conformance/src/__tests__/: conformance.test.ts
conformance/src/adapters/: reference.ts
conformance/src/fixtures/: approval.json  contracts.json  evidence.json  idempotency.json  index.ts  (+2 more)
docs/: .gitignore  POSITIONING.md  README.md  docusaurus.config.js  package.json  sidebars.js
docs/docs/: adoption-paths.md  design-partner-evidence.md  intro.md  mcp-install.md  process-flow.md  proof-demo.md  quick-start.md  release-readiness.md
examples/: README.md  quick-start.ts  quickstart.ts
examples/agent-trust-demo/: package-lock.json  package.json
examples/contracts/: payment-approval.json  procurement-email.json  read-only-data.json
examples/live-dual-demo/: package-lock.json  package.json  tsconfig.json
examples/mcp-demo/: .demo-checklist.md  .gitignore  README.md  STRUCTURE.md  package-lock.json  package.json  tsconfig.json
examples/usyd-procurement/: README.md  agent.ts  contract.ts
gateway/: DUAL_INTEGRATION.md  README.md  package-lock.json  package.json
gateway/src/: gateway.ts  index.ts  server.ts  types.ts  util.ts
integrations/langchain/: README.md  package.json
mcp-server/: ARCHITECTURE.md  DELIVERABLES.md  DEVELOPMENT.md  EXAMPLES.md  INDEX.md  README.md  marketplace-listing.json  package-lock.json  package.json  tsconfig.json
mcp-server/src/: gateway-instance.ts  index.ts
registry/: README.md  package.json
registry/src/: index.ts  registry.ts
sdk/python/: README.md  pyproject.toml
sdk/python/atp_protocol/: __init__.py  approval.py  contract.py  policy.py  types.py
sdk/python/tests/: __init__.py  test_approval.py  test_contract.py  test_policy.py
sdk/ts/: README.md  package-lock.json  package.json
spec/: ATP-SPEC-v1.md
spec/rfcs/: 0000-template.md
spec/schemas/: atp-contract.schema.json
(+80 files in other folders)
