[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atp-protocol"
version = "0.1.0"
description = "Python SDK for the Agent Trust Protocol (ATP) — governed execution for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "ATP Contributors", email = "contact@atp-protocol.org"}
]
keywords = ["atp", "agent", "trust", "protocol", "authorization", "approval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = []

[project.urls]
Homepage = "https://atp-protocol.org"
Documentation = "https://atp-protocol.org/docs"
Repository = "https://github.com/ATP-Protocol/atp-protocol"
Issues = "https://github.com/ATP-Protocol/atp-protocol/issues"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0", "mypy>=1.0.0", "ruff>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["atp_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501", "W503"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
